setting a min-width of 1260px this will stop the log out button overlap

--- a/resources/assets/css/basic.css
+++ b/resources/assets/css/basic.css
@@ -1155,6 +1155,7 @@ dd {
 	width: 100%;
 	height: 100%;
 	background: #F1F1F1;
+	min-width: 1260px;
 }
 
 .footer {
